20090125
	inetd does not handle stderr well,
	so explicit error messages before crashing
	are all commented out
	(the fast-fail principle applied)
	setting VERBOSE_MSG as a compile flag
	will reenable the messages
	(still useful when used with ucspi-tcp)
	More comments on the code inserted
	DUMMYHOSTNAME made shorter
	NOTE: dictionary name is changed to JISYO_FILE
	      (previously JISHO -> now *JISYO*)
	      to match the SKK-JISYO.* filenames
20090124
	dropped supporting server request '3'
	with actual hostname or IP address
	(the current syntax will be broken anyway
	 if IPv6 should be supported)
	since NO CLIENT uses this information for
	authentication or anything meaningful
	except for showing the information to the user
	when optionally requested, so the answer to
	the request is replaced by a fixed string
	defined in the DUMMYHOSTNAME macro
20090118
	version: 1.99-expr.
		strictly EXPERIMENTAL, NOT a release
	removed cdb-0.75 dependencies
	now tinycdb-0.76 required
	removed chroot, setuid, setgid calls from the program
	(more like 1.01)
	Japanese docs changed to reflect the status
20090114
	patches from Tatsuya Kinoshita (Debian package maintainer)
	* awk-locale.patch: Set LC_ALL to C for awk in skktocdbm.sh.
	* datasize.patch: Increase DATASIZE from 2048 to 4096 so that the
	  longest line of SKK-JISYO.L can be used.
	also Tatsuya pointed out the uint32 problem (which has been fixed)
	  of variable datalen
20090113
	BSD make dependencies resolved as pointed out in the following tweet:
		http://twitter.com/konosuke/status/1094925767
	cleanupcdb.sh added
	gcc-4.2.1 signedness warning cleared
		by quitting using unsigned chars
20000312
	Changes from 1.01 to 1.70dev:
	* chroot()s to the SERVER_DIR
	* search() included into the main()'s command loop
	* reports pid to stderr
	* now uses cdb-0.75 source files instead of cdb-0.55's
20000325
	Japanese README complete
	version: dbskkd-cdb-1.70dev.